# Python-Package-Structure

./: README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml
project_name/src/: greetings.py  importing_sub_modules.py  open_resources.py
project_name/src/sub_module/: greetings_from_submodule.py  open_resources_in_submodule.py
tests/: test_main.py  test_submodule.py
