[metadata]
name = Python-Package-Structure
description = This contains a template for structuring python packages.
long_description = file: README.md
long_description_content_type = text/markdow
author = prashantrahul141
url=https://github.com/prashantrahul141/Python-Package-Structure
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages =
    src
    src.sub_module
    resources
    resources.images
    
install_requires =
    art>=5.8
    
python_requires = >=3.7
package_dir =
    =project_name
zip_safe = False

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
* = *.jpg

[flake8]
max-line-length = 160

